fix: improve mobile and full-screen layout for pagination and filters, improved contrast on messages

--- a/src/App.css
+++ b/src/App.css
@@ -74,9 +74,11 @@
     padding: 0.5rem 0.75rem;
   }
 
-  .back-button {
-    font-size: 0.85rem;
+  .back-button, .next-button {
+    font-size: 0.95rem;
     padding: 0.5rem 1rem;
+    height: 2.65rem;
+    letter-spacing: .1rem;
   }
 }
 
