--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
 	/* COLORS */
 	--background-green: #6e707036;
 	--Black: #000000;
-	--Soft-Black: #1a1a1a;
+	--Soft-Black: #141313a7;
 	--Op-Black:#333;
 	--Trans-Black:#00000033;
 	--White: #FFFFFF;
@@ -89,8 +89,6 @@
 	width: 100%;
 	height: 100vh;
 	max-width: 1280px;
-	margin: 0 auto;
-	/* padding: 2rem; */
 	text-align: center
 }
 
